welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: '(' expected but identifier found.
  for ligne( <- 1 to 3){
      ^PictureMono2:5: error: illegal start of simple expression
}
^